update CI workflow to include 'Test' package in testing step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,5 @@ jobs:
       run: |
         julia --project=. -e '
           using Pkg
-          Pkg.add(["Statistics", "Printf", "Dates"])
-          Pkg.instantiate()
-          Pkg.status()
+          Pkg.add(["Statistics", "Printf", "Dates", "Test"])
           Pkg.test()'
