--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        julia-version: ['1.11']
+        julia-version: ['1.10', '1.11']
     
     steps:
     - uses: actions/checkout@v4
