Add explicit permissions for GITHUB_TOKEN in CompatHelper workflow

--- a/.github/workflows/CompatHelper.yml
+++ b/.github/workflows/CompatHelper.yml
@@ -4,6 +4,12 @@ on:
   schedule:
     - cron: 0 0 * * *  # Daily at midnight
   workflow_dispatch:
+
+# Add explicit permissions for the GITHUB_TOKEN
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   CompatHelper:
     runs-on: ubuntu-latest
