--- a/Project.toml
+++ b/Project.toml
@@ -14,5 +14,6 @@ Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
+CFTime = "0.2"
 ClimaOcean = "0.8.4"
 EnsembleKalmanProcesses = "2.5.0"
