Add Downloads package to CI test setup

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,5 +35,5 @@ jobs:
       run: |
         julia --project=. -e '
           using Pkg
-          Pkg.add("Test")
+          Pkg.add(["Test", "Downloads"])
           Pkg.test()'
