--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,5 +35,5 @@ jobs:
       run: |
         julia --project=. -e '
           using Pkg
-          Pkg.add(["Test", "Downloads", "JSON3", "HTTP"])
+          Pkg.add(["Test", "Downloads", "JSON3", "HTTP", "PythonCall"])
           Pkg.test()'
