--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,12 +23,46 @@ jobs:
     
     - name: Cache Julia packages
       uses: julia-actions/cache@v2
+      
+    - name: Generate cache key for GLORYS data
+      id: cache-key
+      run: |
+        julia --project=. -e '
+          using Pkg
+          Pkg.add(["JSON3", "HTTP"])
+          
+          include("test/download_glorys_monthly_figshare_api.jl")
+          
+          files_info = get_figshare_download_url(figshare_id)
+          if files_info !== nothing
+            cache_key = generate_cache_key(files_info)
+            println("::set-output name=glorys_cache_key::$cache_key")
+          else
+            println("::set-output name=glorys_cache_key::fallback-$(date +%Y%m%d)")
+          end
+        '
+        
+    - name: Cache GLORYS data
+      id: cache-glorys
+      uses: actions/cache@v3
+      with:
+        path: ./GLORYS_data
+        key: glorys-data-${{ steps.cache-key.outputs.glorys_cache_key }}
     
     - name: (Temporary) Add specific ClimaOcean branch (ss/omip-prototype)
       run: |
         julia --project=. -e '
           using Pkg
           Pkg.add(url="https://github.com/CliMA/ClimaOcean.jl.git", rev="ss/omip-prototype")
+        '
+
+    - name: Download GLORYS data (if not cached)
+      if: steps.cache-glorys.outputs.cache-hit != 'true'
+      run: |
+        julia --project=. -e '
+          using Pkg
+          Pkg.add(["Downloads", "JSON3", "HTTP", "SHA"])
+          include("test/download_glorys_monthly_figshare_api.jl")
         '
 
     - name: Run tests
