--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ jobs:
       run: |
         julia --project=. -e '
           using Pkg
+          using Dates
           Pkg.add(["JSON3", "HTTP"])
           
           include("test/download_glorys_monthly_figshare_api.jl")
@@ -38,7 +39,7 @@ jobs:
             cache_key = generate_cache_key(files_info)
             println("::set-output name=glorys_cache_key::$cache_key")
           else
-            println("::set-output name=glorys_cache_key::fallback-$(date +%Y%m%d)")
+            println("::set-output name=glorys_cache_key::fallback-$(Dates.format(Dates.today(), "yyyymmdd"))")
           end
         '
         
