--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,4 +72,5 @@ jobs:
         julia --project=. -e '
           using Pkg
           Pkg.add(["Test", "Downloads", "JSON3", "HTTP", "PythonCall"])
+          Pkg.add(url="https://github.com/CliMA/ClimaOcean.jl.git", rev="ss/omip-prototype")
           Pkg.test()'
