--- a/Project.toml
+++ b/Project.toml
@@ -14,15 +14,8 @@ Oceananigans = "9e8cae18-63c1-5223-a75c-80ca9d6e9a09"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 PythonCall = "6099a3de-0909-46bc-b1f4-468b9a2dfc0d"
-Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
-
-[weakdeps]
-CondaPkg = "992eb4ea-22a4-4c89-a5bb-47a3300528ab"
-PythonCall = "6099a3de-0909-46bc-b1f4-468b9a2dfc0d"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
-
-[extensions]
-ClimaOceanCalibrationPythonCallExt = ["PythonCall", "CondaPkg"]
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
 CFTime = "0.2"
@@ -32,4 +25,5 @@ EnsembleKalmanProcesses = "2.5.0"
 LinearAlgebra = "1.11.0"
 OrderedCollections = "1"
 PythonCall = "0.9.28"
+SparseArrays = "1.11.0"
 Statistics = "1"
