unchecked bilinear interpolator fix

--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ ClimaOcean = "0376089a-ecfe-4b0e-a64f-9c555d74d754"
 CondaPkg = "992eb4ea-22a4-4c89-a5bb-47a3300528ab"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 EnsembleKalmanProcesses = "aa8a2aa5-91d8-4396-bcef-d4f2ec43552d"
+KernelAbstractions = "63c18a36-062a-441e-b654-da1e3ab1ce7c"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Oceananigans = "9e8cae18-63c1-5223-a75c-80ca9d6e9a09"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
@@ -22,6 +23,7 @@ CFTime = "0.2"
 ClimaOcean = "0.8.4"
 CondaPkg = "0.2.33"
 EnsembleKalmanProcesses = "2.5.0"
+KernelAbstractions = "0.9.38"
 LinearAlgebra = "1.11.0"
 OrderedCollections = "1"
 PythonCall = "0.9.28"
