--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "0.1.0"
 [deps]
 CFTime = "179af706-886a-5703-950a-314cd64e0468"
 ClimaOcean = "0376089a-ecfe-4b0e-a64f-9c555d74d754"
+ClimaSeaIce = "6ba0ff68-24e6-4315-936c-2e99227c95a4"
 CondaPkg = "992eb4ea-22a4-4c89-a5bb-47a3300528ab"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 EnsembleKalmanProcesses = "aa8a2aa5-91d8-4396-bcef-d4f2ec43552d"
@@ -21,10 +22,12 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 [compat]
 CFTime = "0.2"
 ClimaOcean = "0.8.4"
+ClimaSeaIce = "0.3.6"
 CondaPkg = "0.2.33"
 EnsembleKalmanProcesses = "2.5.0"
 KernelAbstractions = "0.9.38"
 LinearAlgebra = "1.11.0"
+Oceananigans = "0.99.1"
 OrderedCollections = "1"
 PythonCall = "0.9.28"
 SparseArrays = "1.11.0"
