--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "0.1.0"
 
 [deps]
 CFTime = "179af706-886a-5703-950a-314cd64e0468"
+CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 ClimaOcean = "0376089a-ecfe-4b0e-a64f-9c555d74d754"
 ClimaSeaIce = "6ba0ff68-24e6-4315-936c-2e99227c95a4"
 CondaPkg = "992eb4ea-22a4-4c89-a5bb-47a3300528ab"
@@ -21,6 +22,7 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
 CFTime = "0.2"
+CUDA = "5.9.0"
 ClimaOcean = "0.8.4"
 ClimaSeaIce = "0.3.6"
 CondaPkg = "0.2.33"
