--- a/Project.toml
+++ b/Project.toml
@@ -19,6 +19,7 @@ Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 PythonCall = "6099a3de-0909-46bc-b1f4-468b9a2dfc0d"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+XESMF = "2e0b0046-e7a1-486f-88de-807ee8ffabe5"
 
 [compat]
 CFTime = "0.2"
@@ -34,3 +35,4 @@ OrderedCollections = "1"
 PythonCall = "0.9.28"
 SparseArrays = "1.11.0"
 Statistics = "1"
+XESMF = "0.1.3"
