--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,9 @@
 name = "ClimaOceanCalibration"
 uuid = "b5b0db0a-afc0-4eaa-813c-9b0f9c9ed209"
-authors = ["Gregory Wagner <wagner.greg@gmail.com>"]
+authors = [
+    "Gregory Wagner <wagner.greg@gmail.com>",
+    "Xin Kai Lee <xinkai@mit.edu>"
+]
 version = "0.1.0"
 
 [deps]
