--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,6 +54,7 @@ jobs:
       run: |
         julia --project=. -e '
           using Pkg
+          Pkg.add(url="https://github.com/CliMA/ClimaSeaIce.jl.git")
           Pkg.add(url="https://github.com/CliMA/ClimaOcean.jl.git", rev="ss/omip-prototype")
         '
 
@@ -72,5 +73,6 @@ jobs:
         julia --project=. -e '
           using Pkg
           Pkg.add(["Test", "Downloads", "JSON3", "HTTP", "PythonCall"])
+          Pkg.add(url="https://github.com/CliMA/ClimaSeaIce.jl.git")
           Pkg.add(url="https://github.com/CliMA/ClimaOcean.jl.git", rev="ss/omip-prototype")
           Pkg.test()'
