Comment out ClimaSeaIce and ClimaOcean development package installations in CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,8 +55,8 @@ jobs:
         julia --project=. -e '
           using Pkg
           # Clone both repositories to the dev directory first
-          Pkg.develop(PackageSpec(url="https://github.com/CliMA/ClimaSeaIce.jl.git"))
-          Pkg.develop(PackageSpec(url="https://github.com/CliMA/ClimaOcean.jl.git", rev="ss/omip-prototype"))
+          # Pkg.develop(PackageSpec(url="https://github.com/CliMA/ClimaSeaIce.jl.git"))
+          # Pkg.develop(PackageSpec(url="https://github.com/CliMA/ClimaOcean.jl.git", rev="ss/omip-prototype"))
           
           # Instantiate to resolve dependencies
           Pkg.instantiate()
