--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,15 +50,11 @@ jobs:
     #     path: ./GLORYS_data
     #     key: glorys-data-${{ steps.cache-key.outputs.glorys_cache_key }}
     
-    - name: Install ClimaSeaIce and ClimaOcean with dev mode
+    - name: (Temporary) Add specific ClimaOcean branch (ss/omip-prototype)
       run: |
         julia --project=. -e '
           using Pkg
-          # Clone both repositories to the dev directory first
-          # Pkg.develop(PackageSpec(url="https://github.com/CliMA/ClimaSeaIce.jl.git"))
           Pkg.add(url="https://github.com/CliMA/ClimaOcean.jl.git", rev="ss/omip-prototype")
-          
-          # Instantiate to resolve dependencies
           Pkg.instantiate()
         '
 
