--- a/Project.toml
+++ b/Project.toml
@@ -1,9 +1,6 @@
 name = "ClimaOceanCalibration"
 uuid = "b5b0db0a-afc0-4eaa-813c-9b0f9c9ed209"
-authors = [
-    "Gregory Wagner <wagner.greg@gmail.com>",
-    "Xin Kai Lee <xinkai@mit.edu>"
-]
+authors = ["Gregory Wagner <wagner.greg@gmail.com>", "Xin Kai Lee <xinkai@mit.edu>"]
 version = "0.1.0"
 
 [deps]
@@ -21,7 +18,7 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 CFTime = "0.2"
 ClimaOcean = "0.8.4"
 EnsembleKalmanProcesses = "2.5.0"
-Oceananigans = "0.99"
+Oceananigans = "0.99, 0.100"
 OrderedCollections = "1"
 PkgDev = "1.7.2"
 Statistics = "1"
