--- a/Project.toml
+++ b/Project.toml
@@ -1,14 +1,12 @@
 name = "ClimaOceanCalibration"
 uuid = "b5b0db0a-afc0-4eaa-813c-9b0f9c9ed209"
-authors = [
-    "Gregory Wagner <wagner.greg@gmail.com>",
-    "Xin Kai Lee <xinkai@mit.edu>"
-]
+authors = ["Gregory Wagner <wagner.greg@gmail.com>", "Xin Kai Lee <xinkai@mit.edu>"]
 version = "0.1.0"
 
 [deps]
 CFTime = "179af706-886a-5703-950a-314cd64e0468"
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
+ClimaCalibrate = "4347a170-ebd6-470c-89d3-5c705c0cacc2"
 ClimaOcean = "0376089a-ecfe-4b0e-a64f-9c555d74d754"
 ClimaSeaIce = "6ba0ff68-24e6-4315-936c-2e99227c95a4"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
@@ -24,14 +22,12 @@ XESMF = "2e0b0046-e7a1-486f-88de-807ee8ffabe5"
 
 [compat]
 CFTime = "0.2"
-CUDA = "5.9.0"
-ClimaOcean = "0.8.4"
-ClimaSeaIce = "0.3.6"
-EnsembleKalmanProcesses = "2.5.0"
+CUDA = "5.8.5, 5.9"
+ClimaOcean = "0.8.5"
+EnsembleKalmanProcesses = "2.6.0"
 KernelAbstractions = "0.9.38"
-LinearAlgebra = "1.11.0"
-Oceananigans = "0.99"
+Oceananigans = "0.100.3"
 OrderedCollections = "1"
 PkgDev = "1.7.2"
 Statistics = "1"
-XESMF = "0.1.3"
+XESMF = "0.1.5"
