--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,19 @@
+authors = ["Gregory Wagner <wagner.greg@gmail.com>", "Xin Kai Lee <xinkai@mit.edu>"]
 name = "ClimaOceanCalibration"
 uuid = "b5b0db0a-afc0-4eaa-813c-9b0f9c9ed209"
-authors = ["Gregory Wagner <wagner.greg@gmail.com>", "Xin Kai Lee <xinkai@mit.edu>"]
 version = "0.1.0"
+
+[compat]
+CFTime = "0.2"
+CUDA = "5.8.5, 5.9"
+ClimaOcean = "0.8.5"
+EnsembleKalmanProcesses = "2.6.0"
+KernelAbstractions = "0.9.38"
+Oceananigans = "0.100.3"
+OrderedCollections = "1"
+PkgDev = "1.7.2"
+Statistics = "1"
+XESMF = "0.1.5"
 
 [deps]
 CFTime = "179af706-886a-5703-950a-314cd64e0468"
@@ -20,14 +32,6 @@ Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 XESMF = "2e0b0046-e7a1-486f-88de-807ee8ffabe5"
 
-[compat]
-CFTime = "0.2"
-CUDA = "5.8.5, 5.9"
-ClimaOcean = "0.8.5"
-EnsembleKalmanProcesses = "2.6.0"
-KernelAbstractions = "0.9.38"
-Oceananigans = "0.100.3"
-OrderedCollections = "1"
-PkgDev = "1.7.2"
-Statistics = "1"
-XESMF = "0.1.5"
+[extras]
+CUDA_Runtime_jll = "76a88914-d11a-5bdc-97e0-2f5a05c973a2"
+MPIPreferences = "3da0fdf6-3ccc-4f1b-acd9-58baa6c99267"
