--- a/Project.toml
+++ b/Project.toml
@@ -32,26 +32,20 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 XESMF = "2e0b0046-e7a1-486f-88de-807ee8ffabe5"
 
-[sources]
-ClimaCalibrate = {rev = "main", url = "https://github.com/xkykai/ClimaCalibrate.jl.git"}
-ClimaOcean = {rev = "xk/half-degree-simulation", url = "https://github.com/CliMA/ClimaOcean.jl.git"}
-Oceananigans = {rev = "main", url = "https://github.com/CliMA/Oceananigans.jl.git"}
-
 [compat]
 CFTime = "0.2"
-CUDA = "5.8.5, 5.9"
+CUDA = "5.9"
 ClimaCalibrate = "0.1"
-ClimaOcean = "0.8.5"
+ClimaOcean = "0.8"
 ClimaSeaIce = "0.3"
 EnsembleKalmanProcesses = "2.6.0"
-GLMakie = "0.12.0"
-KernelAbstractions = "0.9.38"
-Oceananigans = "0.100.3, 0.103"
+KernelAbstractions = "0.9"
+Oceananigans = "0.100, 0.103"
 OrderedCollections = "1"
-PkgDev = "1.7.2"
+PkgDev = "1.7"
 Statistics = "1"
-XESMF = "0.1.5"
-julia = "1.10"
+XESMF = "0.1"
+julia = "1.12"
 
 [extras]
 CUDA_Runtime_jll = "76a88914-d11a-5bdc-97e0-2f5a05c973a2"
