--- a/Project.toml
+++ b/Project.toml
@@ -38,6 +38,7 @@ CUDA = "5.9"
 ClimaCalibrate = "0.1"
 ClimaOcean = "0.8"
 ClimaSeaIce = "0.3"
+ColorSchemes = "3"
 EnsembleKalmanProcesses = "2.6.0"
 KernelAbstractions = "0.9"
 Oceananigans = "0.100, 0.103"
