CompatHelper: add new compat entry for SeawaterPolynomials at version 0.3, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -43,6 +43,7 @@ KernelAbstractions = "0.9"
 Oceananigans = "0.100, 0.103"
 OrderedCollections = "1"
 PkgDev = "1.7"
+SeawaterPolynomials = "0.3"
 Statistics = "1"
 XESMF = "0.1"
 julia = "1.12"
