CompatHelper: add new compat entry for Glob at version 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -39,6 +39,7 @@ ClimaCalibrate = "0.1"
 ClimaOcean = "0.8"
 ClimaSeaIce = "0.3"
 EnsembleKalmanProcesses = "2.6.0"
+Glob = "1"
 KernelAbstractions = "0.9"
 Oceananigans = "0.100, 0.103"
 OrderedCollections = "1"
