--- a/Project.toml
+++ b/Project.toml
@@ -44,6 +44,7 @@ Oceananigans = "0.100, 0.103"
 OrderedCollections = "1"
 PkgDev = "1.7"
 Statistics = "1"
+TOML = "1"
 XESMF = "0.1"
 julia = "1.12"
 
