CompatHelper: add new compat entry for MPIPreferences at version 0.1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -40,6 +40,7 @@ ClimaOcean = "0.8"
 ClimaSeaIce = "0.3"
 EnsembleKalmanProcesses = "2.6.0"
 KernelAbstractions = "0.9"
+MPIPreferences = "0.1"
 Oceananigans = "0.100, 0.103"
 OrderedCollections = "1"
 PkgDev = "1.7"
